# SVG-regression-finder

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  ci_settings.toml  comment.md  input.txt  settings.toml
.github/workflows/: build.yml  lin.yml  linux.yml  new.yml  thorvg_any_fuzzer.yml  thorvg_one_all_check.yml  thorvg_one_all_check_thread_sanitizer.yml  thorvg_one_fuzzer_check.yml  thorvg_one_fuzzer_check_lottie.yml  thorvg_one_simple_check.yml  thorvg_rsvg_normal.yml  thorvg_rsvg_sanitizer.yml  thorvg_simple_check.yml  thorvg_single_file_difference.yml  thorvg_thorvg_differences.yml  thorvg_thread_sanitizer.yml  thorvg_thread_sanitizer_fuzzer.yml
misc/: ci_settings.toml  ci_settings_as_much.toml  ci_settings_as_much_lottie.toml  same_results.py  thorvg_settings.toml
src/: common.rs  image_comparison.rs  image_comparsion.rs  lottie.rs  main.rs  python_renamer.py  setting.rs  svg_2_png.rs  thorvg.rs
