[package]
name = "svg_tester"
version = "0.3.0"
edition = "2021"
authors = ["Rafał Mikrut"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_hasher = "1.1.2"
image = "0.24.6"
bk-tree = "0.5.0"
hamming = "0.1.3"
rayon = "1.7.0"
walkdir = "2.3.3"
config = "0.13.3"
