[package]
name = "svg_tester"
version = "0.3.0"
edition = "2021"
authors = ["Rafał Mikrut"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_hasher = "2.0"
image = "0.25"
bk-tree = "0.5"
hamming = "0.1"
rayon = "1.10"
walkdir = "2.5"
config = "0.14"
which = "6.0"
